--- a/main.tex
+++ b/main.tex
@@ -782,7 +782,7 @@ O_B \approx (a/\Gamma)^{a/3}
 where $a/\Gamma = \pi/\gamma $ is the canonical Atiyah ratio.
 
 
-Note that $j/496 ≈ 0.229$ is close to the weak mixing angle, but $p/g_0 ≈ 0.232$ is closer to the measured value 0.23116(12) [10], where $g_0 = 7920 $ is the smallest Matthieu sporadic group order. These ratios appear as calculation basis in the product of cardinal orders of the Monster and the baby-Monster groups, to 1\%, 0.2 \%, 1 \% and 0.1\%:
+Note that $j/496 \approx 0.229$ is close to the weak mixing angle, but $p/g_0 \approx 0.232$ is closer to the measured value 0.23116(12) [10], where $g_0 = 7920 $ is the smallest Matthieu sporadic group order. These ratios appear as calculation basis in the product of cardinal orders of the Monster and the baby-Monster groups, to 1\%, 0.2 \%, 1 \% and 0.1\%:
 
 $$O_MO_B\approx H^{2H/a} /approx (g_0/p)^a \approx (496/j)^137 \approx  n_{ph}/d^{1/2} $$
 
