--- a/main.tex
+++ b/main.tex
@@ -786,10 +786,10 @@ Note that $j/496 \approx 0.229$ is close to the weak mixing angle, but $p/g_0 \a
 
 $$O_MO_B\approx H^{2H/a} /approx (g_0/p)^a \approx (496/j)^137 \approx  n_{ph}/d^{1/2} $$
 
-where $n_{ph}\approx (3/\pi) exp(e^6/2)$ (to 0.2 \%) is the photon number in the visible universe. So 496, $p$ and $g0$ are also privileged computations basis. 
+where $n_{ph}\approx (3/\pi) exp(e^6/2)$ (to 0.2 \%) is the photon number in the visible universe. So 496, $p$ and $g_0$ are also privileged computations basis. 
 
-From the above relation, by taking the $137^th$ root, one obtains, to 0.03 \%: $$496/j  ≈ (ae^e/\Gamma)1/3$$.
-
+From the above relation, by taking the $137^th$ root, one obtains, to 0.03 \%: $$496/j  ≈ (ae^e/\Gamma)^{1/3}$$.
+This proves the close imbrication of the optimal basis.
 
 \section{Fine-tuning with basic mathematical constants}
 \markright{Your Full Names.  Short Title of Your Paper}
