--- a/main.tex
+++ b/main.tex
@@ -788,7 +788,7 @@ $$O_MO_B\approx H^{2H/a} /approx (g_0/p)^a \approx (496/j)^137 \approx  n_{ph}/d
 
 where $n_{ph}\approx (3/\pi) exp(e^6/2)$ (to 0.2 \%) is the photon number in the visible universe. So 496, $p$ and $g_0$ are also privileged computations basis. 
 
-From the above relation, by taking the $137^th$ root, one obtains, to 0.03 \%: $$496/j  ≈ (ae^e/\Gamma)^{1/3}$$.
+From the above relation, by taking the $137^th$ root, one obtains, to 0.03 \%: $$496/j \approx (ae^e/\Gamma)^{1/3}$$.
 This proves the close imbrication of the optimal basis.
 
 \section{Fine-tuning with basic mathematical constants}
