--- a/main.tex
+++ b/main.tex
@@ -804,7 +804,7 @@ cosmic radius and the Topological Axis.
 
 
 
-The supplementary term $exp(e^2)$ being close to $a^{3/}. Note that the 'economic number' $E = exp(ee)\approx j^6/F$ (0.0\%), and that $e^2$ is the limmit of the following musical series:
+The supplementary term $exp(e^2)$ being close to $a^{3/2}$. Note that the 'economic number' $E = exp(ee)\approx j^6/F$ (0.0\%), and that $e^2$ is the limmit of the following musical series:
 
 $$(3/2)^5 \approx (4/3)^7   \approx (5/4)^9  \approx  (6/5)^{11}  \approx   ...  \approx  (1+1/n)^{2n+1}  $$  
 
