--- a/main.tex
+++ b/main.tex
@@ -826,7 +826,7 @@ manifestation of the general neglectance of the Hierarchical Principle.
 
 A confirmation of a symmetry between $a$ and 137 is the two following approximations for $p$ with the same imprecision 80 ppb, so leading to the ppb relation:
 
- $$p \approx (137/a) (p_0 H)^{1/2}  \approx EH^3/d_e^2jFD  
+ $$p \approx (137/a) (p_0 H)^{1/2}  \approx EH^3/d_e^2jFD $$ 
 
 where $D = 196883$ is the Moonshine Monster dimension [23], which appears also, to $10^{-7}$, to be $(\pi_p P/d_eF)^{1/2}/H$, with $\pi_p = (p/6)^{1/5}, so confirming again the pertinence of Wyler's approach. Note that its rejection, due to a non-perfect formula for the $p$ and $a$ values, is a new manifestation of the general neglect of the Hierarchy Principle.
 
