--- a/main.tex
+++ b/main.tex
@@ -676,7 +676,7 @@ T^{2} = L^{3} = M^{5} = N^{30}
 where $M$ is a mass ratio. Recall that the lifetime of an unstable particle depends on the 5th power of its mass. This is called the Holic Principle, relating to the apparent world. The Complete Holic
 Principle involves a field term $F^{7}$, and so introduces the dimension $30 \times 7 = 210$. It is confirmed by (to (15 ppm, 1.1 ppm, 56 ppm):
 \begin{equation}
-2/\delta \approach (R/\jambdabar_e)^{1/210} \approach (1/2d_e) ln(pH)/lna \approach (1/d_e^2)ln\tau/ln\mu
+2/\delta \approach (R/\lambdabar_e)^{1/210} \approach (1/2d_e) ln(pH)/lna \approach (1/d_e^2)ln\tau/ln\mu
 R/\lambdabar_e \approx (2/\delta)^{210}
 \end{equation}
 where appear the masses of the heavy leptons (Section 4.6). This implies a dramatic geo-combinatorial relation between $a$ and $p$ : $p^(p²) ≈ (a^2)^(a^3)$ and confirms the central computational role of $\delta = R^{\prime}/R = pH/a^3$, which is to 1.6 ppm:
