--- a/main.tex
+++ b/main.tex
@@ -678,7 +678,7 @@ Principle involves a field term $F^{7}$, and so introduces the dimension $30 \ti
 \begin{equation}
 2/\delta \approx (R/\lambdabar_{e})^{1/210} \approx (1/2d_{e}) ln(pH)/lna \approx (1/d_e^{2})ln\tau/ln\mu
 \end{equation}
-where appear the masses of the heavy leptons (Section 4.6). This implies a dramatic geo-combinatorial relation between $a$ and $p$ : $p^{p^2} \approach (a^2)^{a^3}$ and confirms the central computational role of $\delta = R^{\prime}/R = pH/a^3$, which is to 1.6 ppm:
+where appear the masses of the heavy leptons (Section 4.6). This implies a dramatic geo-combinatorial relation between $a$ and $p$ : $p^{p^{2}} \approach (a^{2})^{a^{3}}$ and confirms the central computational role of $\delta = R^{\prime}/R = pH/a^{3}$, which is to 1.6 ppm:
 \begin{equation}
 \delta \approx e^{2/e^2} 
 \end{equation}
