--- a/main.tex
+++ b/main.tex
@@ -937,11 +937,8 @@ the fractional development of $\pi$ which is itself very close to $n/2\pi$ to $3
 development of $\pi$ is to this date an unsolved problem, it confirms that current mathematics is
 incomplete and that Nature uses rational approximations for $\pi$.
 
-\subsection {The Atiyah constant}
-
-Michael Atiyah was a precursor in the quest for unicity of Mathematics and Physics. His ultimate
-findings in his domain introduced the constant $$\Gamma = \gamma a/\pi$$, as a simplified term [24]. Indeed this
-constant $\Gamma$ clarifies some of the expressions given below:
+\subsection {The central role of Atiyah constant}
+This constant $\Gamma$ clarifies some of the above expressions:
 \begin{equation}
 a_{w} = (137 \times 2 \Gamma)^{3}
 \end{equation}
@@ -949,11 +946,11 @@ a_{w} = (137 \times 2 \Gamma)^{3}
 W \approx 137^{2} \Gamma / 3d_{e}
 \end{equation}
 \begin{equation}
-( \Gamma\sqrt{a_{w}/\gamma d_{e})}^{1/3} \approx 4n\prime / \Gamma
+( \Gamma F/\gamma d_{e})}^{1/3} \approx 4n^{\prime} / \Gamma
 \end{equation}
 and the above relation giving $a_{G}$ shows a dual form, the first one without any numerical factor:
 \begin{equation}
-ap_{G} / \pi \sqrt(pH) \approx (n_{F}/137^{2} \Gamma^{3} )^{3} \approx (4n/ \Gamma)^{3}/F
+ap_{G} / \pi \sqrt(pH) \approx (n F/137^{2} \Gamma^{3} )^{3} \approx (4n/ \Gamma)^{3}/F
 \end{equation}
 Now, as recalled previously in the Holic Principle, the exponents represent the number of
 dimensions. So, this correlates to a dimensional reduction, by eliminating 137, from 9D and 6D to
@@ -967,16 +964,7 @@ compatible with the Higgs Boson energy, interesting to note the perfect match wi
 \approx 4\pi + 2$. The length $\lambdabar_{e} f{\Gamma} \approx 5\times 10^{5}$ light-years is characteristic of a galaxy group radius, and the length associated to the Milankovich cycle. One obtains :
 $\Gamma \approx e^\pi + 2$
 meaning that the special value in the Topological Axis $k = e^{\pi} /4 \approx 4/ln2$ corresponds to about $n = \Gamma$.
-The following double correlation is specially suggestive (2.2 and 0.3 ppm):
-\begin{equation}
-a \approx 4\pi^{3} + \pi^{2} + \pi \approx ln(R/\lambdabar_{e} ) + \Gamma + e^{\pi}
-\end{equation}
-the first one is due to Reilly, and the second one confirms the R value. Moreover the uncertainty ranges from 0.013\% to 0.046\%:
-\begin{equation}
-a - e^{\pi} \approx e^{\pi} lna \approx j = 8\pi^{2} /ln2 \approx \Theta_{mam} /\Theta_{CMB}
-\end{equation}
-where j is the Sternheimer scale factor, central in Theoretical Biology [3][39], being, in particular the
-Temperature ratio Mammal/CMB.
+
 
 \section {Discussion}
 \markright{Bizouard, Flawisky, Gayral, Grosmann, Gueroult, Kotov, Sanchez, Veysseyre. Back to Cosmos}
