--- a/main.tex
+++ b/main.tex
@@ -946,7 +946,7 @@ a_{w} = (137 \times 2 \Gamma)^{3}
 W \approx 137^{2} \Gamma / 3d_{e}
 \end{equation}
 \begin{equation}
-( \Gamma F/\gamma d_{e})}^{1/3} \approx 4n^{\prime} / \Gamma
+( \Gamma F/\gamma d_{e})^{1/3} \approx 4n^{\prime} / \Gamma
 \end{equation}
 and the above relation giving $a_{G}$ shows a dual form, the first one without any numerical factor:
 \begin{equation}
