--- a/main.tex
+++ b/main.tex
@@ -920,7 +920,7 @@ Z \approx ap^{2} \cdot \pi^{4} / 137 \cdot d_{e}^{n}
 \end{equation}
 Considering the above values, the relation $$R/\sqrt(\lambdabar_{p} \lambdabar_{H} ) \approx (WZ)^{4}$$ matches G value in the ppb range.
 
-\subsection {The Direct Gravitational Constant mathematical fine-tuning}
+\subsection {The Gravitational Constant fine-tuning}
 
 Computer analysis shows the following ppb precise extension for the deviation between $2^{127}$ and
 $a_{G}$ ,
@@ -929,11 +929,11 @@ $a_{G}$ ,
 \end{equation}
 leading to:
 \begin{equation}
-(aa_{w}^{1/2} /\pi d_{e})^{1/3} \approx 4\pi n\prime/ \gamma^{a}
+(aF /\pi d_{e})^{1/3} \approx 4\pi n^{\prime}/ \gamma a
 \end{equation}
-where $n\prime = nH/p$ is the principal value of the neutron mass by respect to the electron effective mass
+where $n^{\prime} = nH/p$ is the principal value of the neutron mass by respect to the electron effective mass
 in the Hydrogen atom. Note that this is close (0.12\%) to the monstrous 5th term 292.6345909 in
-the fractional development of $\pi$ which is itself very close to $n/2\pi$ to $3.4 \times 10^{-6}$ . Since the fractional
+the fractional development of $\pi$ which is itself very close to $n/2\pi$ to 3.4 ppm. Since the fractional
 development of $\pi$ is to this date an unsolved problem, it confirms that current mathematics is
 incomplete and that Nature uses rational approximations for $\pi$.
 
