--- a/main.tex
+++ b/main.tex
@@ -913,12 +913,12 @@ confirming the central role of the Moonshine Monster dimension [23] D = 196883.
 
 The computer indicates, with $n \approx 1838.68366089(17)$ the neutron/electron mass ratio:
 \begin{equation}
-W \approx \gamma \cdot a \cdot 137^{2} / 3\pi d_{e}
+W \approx \gamma a 137^{2} / 3\pi d_{e}
 \end{equation}
 \begin{equation}
-Z \approx ap^{2} \cdot \pi^{4} / 137 \cdot d_{e}^{n}
+Z \approx ap^{2} \pi^{4} / 137 \cdot d_{e} n
 \end{equation}
-Considering the above values, the relation $$R/\sqrt(\lambdabar_{p} \lambdabar_{H} ) \approx (WZ)^{4}$$ matches G value in the ppb range.
+Considering the above values, the relation $$R/\sqrt(\lambdabar_{p} \lambdabar_{H} ) \approx (WZ)^{4}$$ matches the above $G$ value in the ppb range.
 
 \subsection {The Gravitational Constant fine-tuning}
 
