--- a/main.tex
+++ b/main.tex
@@ -884,26 +884,27 @@ see below how this formulae simplifies again by using the Atiyah Constant.
 
 Admitting the above relation, this defines \begin{equation} 
 F = a_{w}^{1/2} = E_{F} /m_{e} c^{2} \approx 573007.3652
-\end{equation}, inside its $2.5 10^{-7}$
-indetermination. Another fine-tuning ties the muon, proton and Hydrogen masses: 
+\end{equation} inside its 0.25 ppm
+indetermination. 
+
+Another fine-tuning ties the muon, proton and Hydrogen masses: 
 \begin{equation}
-\frac{E_{F}}{m_{e} \cdot c^{2}} \approx
-m_{\mu}^{2} \sqrt{(m_{p} \cdot m_{H})}/am_{e}^{3}
+E_{F}/m_{e} c^{2} \approx
+m_{\mu}^{2}{(m_{p} m_{H})^{1/2}/am_{e}^{3}
 \end{equation}. 
 It yields to a muon mass relative to electron 
 \begin{equation}
-\mu = 206.7682869
-\end{equation}, inside its
-$2 \times 10^{-8}$ measurement range.
+\mu approx 206.7682869
+\end{equation} inside its 20 ppb measurement range.
 Now the Koide relation [22], where $\mu$ and $\tau$ are the Muon and Tau masses relative to Electron:
 \begin{equation}
 (1 + \mu + \tau)/2 = (1 + \sqrt\mu + \sqrt\tau)^{2/3}
 \end{equation}
-has a mathematical justification in term of circulating matrix. The correctly predicted tau/electron
+has a mathematical justification in term of circulating matrix. It correctly predicted tau/electron
 mass ratio at an epoch during which its measurement was false to 3 sigmas. With the above $\mu$ value, it
-gives $$\tau \approx 3477.441701$$. This Koide relation, quite discarded by the communality, is another sign of
+gives $$\tau \approx 3477.441701$$ This Koide relation, quite discarded by the communality, is another sign of
 the serious incompleteness of present Particle Physics standard model. This value correlates with the
-term $1+1/\sqrt{a}$, central in quantum electrodynamics to $10^{-7}$:
+term $1+1/\sqrt{a}$, central in quantum electrodynamics to 0.1 ppm:
 \begin{equation}
 1+1/\sqrt{a} \approx \tau^{3} H/pD^{2}
 \end{equation}
