--- a/main.tex
+++ b/main.tex
@@ -871,12 +871,12 @@ The Particle standard model achieved the unification between electromagnetism an
 nuclear force. One ought to look for the relation involving a, 137, $a_{w}$ and the mathematical constants. One
 immediately gets:
 \begin{equation}
-a_{w} \approx (2\gamma \cdot 137 \cdot a/\pi)^{3}
+a_{w} \approx (2\gamma 137 a/\pi)^{3}
 \end{equation}
-Now, by introducing the featured length $$l_{eF} = (\frac{G_{F}}{m_{e} \cdot c^{2}})^{1/3}$$ , the electroweak constant appears as
-a cube $a_{w} \approx (\frac{\lambdabar_{e}}{l_{eF}}^{3}$ , yielding to:
+Now, by introducing the featured length $l_{eF} = (G_{F}/m_{e} c^{2}})^{1/3}$, the electroweak constant appears as
+a cube $a_{w} \approx (\lambdabar_{e}/l_{eF})^{3}$ , yielding to:
 \begin{equation}
-\frac{\lambdabar}{l_{eF}} \approx 2\gamma \cdot 137 \cdot a/\pi
+\lambdabar/l_{eF} \approx 2\gamma 137 a/\pi
 \end{equation}
 see below how this formulae simplifies again by using the Atiyah Constant.
 
