--- a/main.tex
+++ b/main.tex
@@ -873,7 +873,7 @@ immediately gets:
 \begin{equation}
 a_{w} \approx (2\gamma 137 a/\pi)^{3}
 \end{equation}
-Now, by introducing the featured length $l_{eF} = (G_{F}/m_{e} c^{2}})^{1/3}$, the electroweak constant appears as
+Now, by introducing the featured length $l_{eF} = (G_{F}/m_{e} c^{2})^{1/3}$, the electroweak constant appears as
 a cube $a_{w} \approx (\lambdabar_{e}/l_{eF})^{3}$ , yielding to:
 \begin{equation}
 \lambdabar/l_{eF} \approx 2\gamma 137 a/\pi
