--- a/main.tex
+++ b/main.tex
@@ -835,20 +835,26 @@ Note that the Lenz-Wyler formula is nothing but the product of the area by the v
 \subsection {The Archimedes constant $\pi$ as a calculation basis}
 
 The value of the Topological Function for the String
-main dimension 26 renders, to 0.1\%, the same Lenz-Wyler form $f{26} \approx 6(2\pi^{2} a^{3} )^{5}$ , where $2\pi^{2}a^{3}$ is the area of a 4-sphere of radius $a$. Moreover, with $n/p$ the mass ratio Neutron/Proton, to 0/3\%, 0.02\% and 1
+main dimension 26 renders, to 0.1\%, the same Lenz-Wyler form $f{26} \approx 6(2\pi^{2} a^{3} )^{5}$, where $2\pi^{2}a^{3}$ is the area of a 4-sphere of radius $a$. Moreover, with $n/p$ the mass ratio Neutron/Proton, to 0/3\%, 0.02\% and 1
 ppm:
-$$(p/n) (R/\lambdabar_{e})^{2} \approx (f{26}/6)^{2} \approx (2\pi^{2} a^{3})^{10} \approx \pi^{155}$$
+$$(p/n) (R/\lambdabar_{e})^{2} \approx (f(26)/6)^{2} \approx (2\pi^{2} a^{3})^{10} \approx \pi^{155}$$
 The corresponding value of $\pi$ in the last expression shows the fractional series 3, 7, 16, -u, with $u \approx
 2 \times 137$. This confirms the above hypothesis concerning the origin of the Cosmos vastness, namely
 that $\pi$ is a intermediate rational calculation basis: in this case, the rational value $\pi_{0} = (355u-22)/
-(113u+7)$ corresponds to the above G value to $10^{-8}$ accuracy.
-Since $(R/\lambdabar_{e})^{2}$ is also close to $2^{256}$ , within 1\%, this illustrates the following musical relation
+(113u+7)$ corresponds to the above $G$ value to 10 ppb accuracy.
+
+Since $(R/\lambdabar_{e})^{2}$ is also close to $2^{256}$, within 1\%, this illustrates the following musical relation
 involving again 137:
 $$2^{1/155} \approx \pi^{1/256} \approx (2\pi)^{1/3 \times 137}$$
 The scale with 155 notes is not known, but 137 appears also in the classical musical scales [3], in
 particular the 5th 306 notes scale (about $\pi^{5}$), in conjunction with the canonical definition of the optimal
-scale e, encountered all along above, and confirmed below.
-One remarks that entire powers of $\pi$ appears in the 2 ppm Reilly formula: $a \approx 4\pi^{3} + \pi^{2} + \pi$
+scale e, encountered all along above.
+
+One remarks that entire powers of $\pi$ appears in the 2 ppm Reilly formula: 
+\begin{equation}
+a \approx 4\pi^{3} + \pi^{2} + \pi \approx \pi^{9/2}2^{1/3}
+\end{equation}
+
 Recall that whole powers of $\pi$ appears also in the even order Riemann series.
 
 \subsection {The Euler constant e confirmed as the optimal calculation basis for the Grandcosmos}
