--- a/main.tex
+++ b/main.tex
@@ -800,20 +800,15 @@ cosmic radius and the Topological Axis.
 
 \subsection {The Euler constant e confirmed as the optimal calculation basis}
     The Topological Axis shows clearly that the Grandcosmos is defined by the following conjunction (1\%):
+\begin{equation}
+f(e^{2}) = exp(2^{e^{2+\frac{1}{2}}}) \approx exp(e^{2e}+e^{2})
+\end{equation}
 
-
-
-
-The supplementary term $exp(e^2)$ being close to $a^{3/2}$. Note that the 'economic number' $E = exp(ee)\approx j^6/F$ (0.0\%), and that $e^2$ is the limmit of the following musical series:
-
+The supplementary term $exp(e^2)$ being close to $a^{3/2}$. Note that the 'economic number' $E = exp(ee)\approx j^6/F$ (0.0\%), and that $e^2$ is the limit of the following musical series:
 $$(3/2)^5 \approx (4/3)^7   \approx (5/4)^9  \approx  (6/5)^{11}  \approx   ...  \approx  (1+1/n)^{2n+1}  $$  
-
 a series converging very much rapidly than the classical Euler's one $(1+1/n)^n$. The first two terms defines the occidental 12 tones scale.
 
-
 \subsection {Wyler's approach}
-
-
 Armand Wyler singularized a value approaching $a$ to 0.6 ppm and confirmed the pertinence
 of the Lenz approximation which plays a central role above: $p_{0} = 6\pi^{5}$ approaching $p$ to 18.824 ppm.
 
@@ -856,20 +851,6 @@ a \approx 4\pi^{3} + \pi^{2} + \pi \approx \pi^{9/2}2^{1/3}
 \end{equation}
 
 Recall that whole powers of $\pi$ appears also in the even order Riemann series.
-
-\subsection {The Euler constant e confirmed as the optimal calculation basis for the Grandcosmos}
-
-The Topological Axis shows clearly that the Grandcosmos is defined by the following
-conjunction:
-\begin{equation}
-f{e^{2}} = exp(2^{e^{2+\frac{1}{2}}}) \approx exp(e^{2e}+e^{2})
-\end{equation}
-The supplementary term $exp(e^{2})$ is close to $a^{3/2}$. Note that $e^{2}$ has the following musical property:
-\begin{equation}
-(3/2)^{5} \approx (4/3)^{7} \approx (5/4)^{9} \approx (6/5)^{11} \approx ... \approx (1+1/n)^{2n+1} \Rightarrow e^{2}
-\end{equation}
-a series converging faster than the Euler's one $$(1+\frac{1}{n})^{n} \rightarrow e$$. The first two terms define
-the occidental 12 tones scale.
 
 \subsection {The electroweak constant mathematical fine tuning}
 
