--- a/main.tex
+++ b/main.tex
@@ -869,19 +869,20 @@ see below how this formulae simplifies again by using the Atiyah Constant.
 
 \subsection {The Muon and Tau fine tuning}
 
-Admitting the above relation, this defines \begin{equation} 
+Admitting the above relation, this defines 
+\begin{equation} 
 F = a_{w}^{1/2} = E_{F} /m_{e} c^{2} \approx 573007.3652
-\end{equation} inside its 0.25 ppm
-indetermination. 
+\end{equation}
+inside its 0.25 ppm indetermination. 
 
 Another fine-tuning ties the muon, proton and Hydrogen masses: 
 \begin{equation}
 E_{F}/m_{e} c^{2} \approx
 m_{\mu}^{2}(m_{p} m_{H})^{1/2}/am_{e}^{3}
-\end{equation}. 
+\end{equation} 
 It yields to a muon mass relative to electron 
 \begin{equation}
-\mu approx 206.7682869
+\mu \approx 206.7682869
 \end{equation} inside its 20 ppb measurement range.
 Now the Koide relation [22], where $\mu$ and $\tau$ are the Muon and Tau masses relative to Electron:
 \begin{equation}
