--- a/main.tex
+++ b/main.tex
@@ -152,7 +152,7 @@ Considering the standard cosmological neutrino background (CNB), whose wavelengt
 with the synthesis of the two main cosmologies, where the single Bang is replaced by a matter-
 antimatter Oscillatory Bounce [5].
 
-\begin{figure}
+\begin{figure*}
 \centering
 \includegraphics[width=8cm,height=6.5cm]{./figures/figure}
 \caption{The Topological Axis. Double logarithm (y = lnln(Y)) of main dimensionless physical quantities 
@@ -177,7 +177,7 @@ periodicity 8 [25] which is at the origin of the name `topological axis`.
     With unit the Kotov length, the Holic dimension n = 30 corresponds to the Monster cardinal, 
     apart a $\sqrt2$ factor.}
 \label{fig:figure_label}
-\end{figure}
+\end{figure*}
 
 It was noted [1] that $a_{G}$ is of order $W^{8}$ , where $W$ is the mass ratio W boson-
 Electron. With the above $R$ value, one observes the following more symmetrical relation involving
