--- a/main.tex
+++ b/main.tex
@@ -154,7 +154,7 @@ antimatter Oscillatory Bounce [5].
 
 \begin{figure*}
 \centering
-\includegraphics[width=\textwidth*1.14,height=14cm]{./figures/figure}
+\includegraphics[width=\textwidth,height=14cm]{./figures/figure}
 \caption{The Topological Axis. Double logarithm (y = lnln(Y)) of main dimensionless physical quantities 
 Y corresponds to the String dimension series n = 4k + 2, from k = 0 to k = 7, showing the Cartan-Bott
 periodicity 8 [25] which is at the origin of the name `topological axis`.
