--- a/main.tex
+++ b/main.tex
@@ -804,7 +804,7 @@ cosmic radius and the Topological Axis.
 f(e^{2}) = exp(2^{e^{2+\frac{1}{2}}}) \approx exp(e^{2e}+e^{2})
 \end{equation}
 
-The supplementary term $exp(e^2)$ being close to $a^{3/2}$. Note that the 'economic number' $E = exp(ee)\approx j^6/F$ (0.0\%), and that $e^2$ is the limit of the following musical series:
+The supplementary term $exp(e^2)$ being close to $a^{3/2}$. Note that the 'economic number' $E = exp(e^{e})\approx j^6/F$ (0.0\%), and that $e^2$ is the limit of the following musical series:
 $$(3/2)^5 \approx (4/3)^7   \approx (5/4)^9  \approx  (6/5)^{11}  \approx   ...  \approx  (1+1/n)^{2n+1}  $$  
 a series converging very much rapidly than the classical Euler's one $(1+1/n)^n$. The first two terms defines the occidental 12 tones scale.
 
