--- a/main.tex
+++ b/main.tex
@@ -117,7 +117,7 @@ most recent measurement [4]: 72(3) (km/s)/Megaparsec, which confirms the value m
 directly by the 1a type novae, while the standard optimization of 6 parameters results in a lower
 value of 9\%.
 
-Consider the wavelength $\lambdabar_{M} = \hbar /Mc = 4 10^{-96} m$ of the visible Universe of mass $M$. This `Topon` is close to the touchstone n = 30 of the Topological Axis, see Fig. 1,
+Consider the wavelength $\lambdabar_{M} = \hbar /Mc = 4 \cdot 10^{-96} m$ of the visible Universe of mass $M$. This `Topon` is close to the touchstone n = 30 of the Topological Axis, see Fig. 1,
 corresponding to $n \approx 2e^{e}$ , to $0.01\%$. The Topological Axis illustrates the function $f(n + 4) = f^{2}(n)$
 and results from the imbrication of relations of the form 
 $
