--- a/main.tex
+++ b/main.tex
@@ -1116,7 +1116,9 @@ Biology.
 The authors salute the memory of Sir Michael Atiyah for his encourragements to the
 first author:`I appreciate your efforts in physics'. His introduction of the rather
 unexpected Euler-Mascheroni constant in the fine-tuning research has considerably helped our task
-of proving the existence of a fundamental theory. We also thank a private communication by Joel Sternheimer about his scale factor, we called $j$ in his honor.
+of proving the existence of a fundamental theory. We also thank helpful discussions with the 
+mathematician Anatole Khelif and private communication by Joel Sternheimer about his scale factor, 
+we called $j$ in his honor.
 %
 \begin{flushright}\footnotesize
 Submitted on April 1st, 2019 / Accepted on April 6th, 2019
