--- a/main.tex
+++ b/main.tex
@@ -55,7 +55,7 @@ The visible Universe wavelength `Topon`: 2$G$$\hbar$/$R$c$^3\!$ $\approx$ 4 $\ti
 The monochromatic holographic extension leads to a Grandcosmos, larger than the visible Universe by the same factor 10$^{61}\!$.
 This implies a tachyonic speed in the same ratio by respect to $c$, justifying the Planck renormalisation of the Vacuum Energy, independently checked by the Casimir effect.
 The couple Universe-Grandcosmos is confirmed by a dramatic geo-dimensional analysis, where Length, Time and Mass are considered as unit vectors in a 3D Super-space. A matter-antimatter 10$^{104}\!$ Hz Oscillatory Bounce unifies standard Single Bang with steady-state cosmology, but suppress Relativity in cosmology at large, reestablishing the Newton Absolute Space-Time realized by the Microwave Cosmic Radiation, while Kotov cycle defines a quasi-absolute clock.
-This new scanning space-time structure is confirmed by single-electron cosmology, connected with Kotov period, relying on Sternheimer's Scale Factor $j$ and Atiyah's constant $\Gamma$, which appear as privileged computational basis, as well as e, $\pi$ and $a$ $\approx$ 137.036, in liaison with the sporadic groups. While $j$ shows overwhelming biological pertinence, $\Gamma$ and Eddington's constant 137 enter dramatic ppb ($10^{-9}$) precision relations with particle data. This predics unificaton of mathematics, informatics, physics, chemistry and biology. The future telescopes will find mature galaxies in the very far range, instead of a Dark Space, ruining definitely the standard evolutionary cosmology, ill-founded on an imperfect Cosmological Principle.
+This new scanning space-time structure is confirmed by single-electron cosmology, connected with Kotov period, relying on Sternheimer's Scale Factor $j$ and Atiyah's constant $\Gamma$, which appear as privileged computational basis, as well as e, $\pi$ and $a$ $\approx$ 137.036, in liaison with the sporadic groups. While $j$ shows overwhelming biological pertinence, $\Gamma$ and Eddington's constant 137 enter dramatic ppb ($10^{-9}$) precision relations with particle data. This predics unificaton of mathematics, computer science, physics, chemistry and biology. The future telescopes will find mature galaxies in the very far range, instead of a Dark Space, ruining definitely the standard evolutionary cosmology, ill-founded on an imperfect Cosmological Principle.
 %% TODO: Insérer axe topologique
 }}\smallskip
 \end{center}]{%
