--- a/main.tex
+++ b/main.tex
@@ -708,7 +708,7 @@ relations would be only Fourier transform manifestations of Wave Mechanics.
 
 
 \subsection{Atiyah and Sternheimer constants}
-    Sir Michael Atiyah was a precurseur in the search for unity in Mathematics and Physics. His last work in this domain introduced the constant $\Gamma = gamma a /\pi$, as a simplification term [22]. Indeed $\Gamma$ and the canonical $e^{\pi}$ enter the following dramatic simplification of the above (Section 2.3.1) single-electron cosmical formula (0.3 ppm):    
+    Sir Michael Atiyah was a precurseur in the search for unity in Mathematics and Physics. His last work in this domain introduced the constant $\Gamma = \gamma a /\pi$, as a simplification term [22]. Indeed $\Gamma$ and the canonical $e^{\pi}$ enter the following dramatic simplification of the above (Section 2.3.1) single-electron cosmical formula (0.3 ppm):    
 \begin{equation}
 a = (p/H)((ln(R_1/\lambdabar_e) + \gamma – 1)/(\pi^2/6 - 1)) \approx ln(R/\lambdabar e) + \Gamma + e^{\pi}
 \end{equation}
@@ -718,10 +718,40 @@ Moreover, this confirms the central role of the Sternheimer scale factor $j = 8\
 \begin{equation}
 j \approx ln(R/\lambdabar e) + \Gamma \approx a - e^{\pi} \approx e^{\pi} lna
 \end{equation}
-It was noted [3] that $j\approx T_mam/T_CMB$, the ratio between mammal and cosmic teperatures, and that $sqrt{Rl_P}$ is close (1\%) to the mammal wavelength $hc/kT_mam$. So, \textit{the couple temal photon-Life is at the upper center of the Topological Axis}, while the down center is the Higgs boson (Fig.1). The real center, as seen above, is the dimension n = 16. Moreover,$sqrt{R^{\prime}l_P}$ is close (0.1\%) to the water triple point, which is also the product of triple points of Hydrogen and Oxygen, divided by the cosmic temperature. This shows that Chemistry is also involved
+It was noted [3] that $j\approx T_{mam}/T_{CMB}$, the ratio between mammal and cosmic temperatures, and that $(Rl_P)^{1/2}$ is close (1\%) to the mammal wavelength $hc/kT_{mam}$. So, \textit{the couple temal photon-Life is at the upper center of the Topological Axis}, while the down center is the Higgs boson (Fig.1). The real center, as seen above, is the dimension n = 16. Moreover,$(R^{\prime}l_P)^{1/2}$ is close (0.1\%) to the water triple point, which is also the product of triple points of Hydrogen and Oxygen, divided by the cosmic temperature. This shows that Chemistry is also involved [3].
 
-Now, the study of the 22 amino-acids [3] has shown that $j$ is a computation basis, to 2\%: $j^{22} \approx 3 P^2 $, and, more precisely, to 0.01 \% :$j^{22} \approx Pp_E^7 $, where $ p_E \approx 1847.599459$ is the Eddington's mass ratio of the couple proton-electron, the roots ratio in the Eddington's equation $10x^2 - 136x + 1 = 0 $ .
+Now, the study of the 22 amino-acids [3] has shown that $j$ is a computation basis. Indeed, to 2\%: $j^{22} \approx 3 P^2 $, and, more precisely, to 0.01 \% :$j^{22} \approx Pp_E^7 $, where $ p_E \approx 1847.599459$ is the Eddington's mass ratio of the couple proton-electron, the roots ratio in the Eddington's equation $10x^2 - 136x + 1 = 0 $.
 
+The last equation means the implication of $B = exp(e^{\pi}) in the ultimate theory. Indeed, it appears in the following holographic relation, with the Fermi-Electron mass ratio $F$ value of Section III, to 0.3 ppm and 0.03 % :
+
+\begin{equation}
+(ƛ_{CMB}/ƛ_e)^3 ≈ F^5/6 ≈ B^3/a
+\end{equation}
+ 
+It appears also in the following holographic relation, to 0.16 % :
+
+\begin{equation}
+(4p/3) B3 ≈ p(F3/a)2
+\end{equation}
+
+while $F^3/(44\pi)$ is close, to 0.01 \%, to the term $A = (3/2) a^7$, which enters, the 'forgotten' electromagnetic power $E_e^2/Aħ$, in the Hydrogen atom, with $E_e = m_ec^2$.
+         Note that, to 10 ppm and 2 ppm:
+
+\begin{equation}
+(H/n)^2(F^2/B)^3 ≈ (4/3) a^2 ≈ W/2\pi \beta^4
+\end{equation}
+
+Where $W$ is the W boson-Electron mass ratio (see Section III). Now, to 30 ppm and 20 ppm :  
+
+\begin{equation}
+ (F^3/a)^2 ≈ (P/FH²)^3  ≈  (a/137)(4\pi/3)(F^2/√p)^3 
+\end{equation}
+
+The central term F3/a shows another relation between j and G, to 0.05 % and 0.2 %:
+\begin{equation}
+F^3/a ≈ (3/e)(e/2)^j  ≈ (3/\pi) 4G
+\begin{equation}
+confirming that j and G has the status of invariant dimension, i.e. they are, according to the Holic Principle, privileged exponents.
 
 \subsection{Ubiquity of $a^{a}$}
 
@@ -800,7 +830,7 @@ cosmic radius and the Topological Axis.
 \subsection {The Euler constant e confirmed as the optimal calculation basis}
     The Topological Axis shows clearly that the Grandcosmos is defined by the following conjunction (1\%):
 \begin{equation}
-f(e^{2}) = exp(2^{e^{2+\frac{1}{2}}}) \approx exp(e^{2e}+e^{2})
+f(k = e^{2}) = exp(2^{e^{2+\frac{1}{2}}}) \approx exp(e^{2e}+e^{2})
 \end{equation}
 
 The supplementary term $exp(e^2)$ being close to $a^{3/2}$. Note that the 'economic number' $E = exp(e^{e})\approx j^6/F$ (0.0\%), and that $e^2$ is the limit of the following musical series:
