--- a/main.tex
+++ b/main.tex
@@ -725,7 +725,7 @@ Now, the study of the 22 amino-acids [3] has shown that $j$ is a computation bas
 The last equation means the implication of $B = e^{(e^{\pi}} $ in the ultimate theory. Indeed, it appears in the following relation, with the Fermi-Electron mass ratio $F$ value of Section III, to 0.3 ppm and 0.03 \% :
 
 \begin{equation}
-(\lambdabar_{CMB}/\lambdabar_e)^3 \approx F^5/6 ≈ B^3/a
+(\lambdabar_{CMB}/\lambdabar_e)^3 \approx F^5/6 \approx B^3/a
 \end{equation}
  
 It appears also in the following holographic relation, to 0.16 \% :
@@ -735,7 +735,7 @@ It appears also in the following holographic relation, to 0.16 \% :
 \end{equation}
 
 while $F^3/(44\pi)$ is close, to 0.01 \%, to the term $A = (3/2) a^7$, which enters, the 'forgotten' electromagnetic power $E_e^2/Aħ$, in the Hydrogen atom, with $E_e = m_ec^2$.
-         Note that, to 10 ppm and 2 ppm:
+Note that, to 10 ppm and 2 ppm:
 
 \begin{equation}
 (H/n)^2(F^2/B)^3 ≈ (4/3) a^2 \approx W/2\pi \beta^4
