--- a/main.tex
+++ b/main.tex
@@ -722,36 +722,13 @@ It was noted [3] that $j\approx T_{mam}/T_{CMB}$, the ratio between mammal and c
 
 Now, the study of the 22 amino-acids [3] has shown that $j$ is a computation basis. Indeed, to 2\%: $j^{22} \approx 3 P^2 $, and, more precisely, to 0.01 \% :$j^{22} \approx Pp_E^7 $, where $ p_E \approx 1847.599459$ is the Eddington's mass ratio of the couple proton-electron, the roots ratio in the Eddington's equation $10x^2 - 136x + 1 = 0 $.
 
-The last equation means the implication of $B = e^{(e^{\pi}} $ in the ultimate theory. Indeed, it appears in the following relation, with the Fermi-Electron mass ratio $F$ value of Section III, to 0.3 ppm and 0.03 \% :
 
+
+The central term $F^3/a$ shows another relation between $j$ and $\Gamma$, to 0.05 % and 0.2 \%:
 \begin{equation}
-(\lambdabar_{CMB}/\lambdabar_e)^3 \approx F^5/6 \approx B^3/a
-\end{equation}
- 
-It appears also in the following holographic relation, to 0.16 \% :
-
+F^3/a ≈ (3/e)(e/2)^j  \approx (3/\pi) 4^{\Gamma}
 \begin{equation}
-(4\pi/3) B^3 \approx \pi(F^3/a)^2
-\end{equation}
-
-while $F^3/(44\pi)$ is close, to 0.01 \%, to the term $A = (3/2) a^7$, which enters, the 'forgotten' electromagnetic power $E_e^2/Aħ$, in the Hydrogen atom, with $E_e = m_ec^2$.
-Note that, to 10 ppm and 2 ppm:
-
-\begin{equation}
-(H/n)^2(F^2/B)^3 ≈ (4/3) a^2 \approx W/2\pi \beta^4
-\end{equation}
-
-Where $W$ is the W boson-Electron mass ratio (see Section III). Now, to 30 ppm and 20 ppm :  
-
-\begin{equation}
- (F^3/a)^2 ≈ (P/FH²)^3  \approx  (a/137)(4\pi/3)(F^2/√p)^3 
-\end{equation}
-
-The central term F3/a shows another relation between j and G, to 0.05 % and 0.2 %:
-\begin{equation}
-F^3/a ≈ (3/e)(e/2)^j  \approx (3/\pi) 4G
-\begin{equation}
-confirming that j and G has the status of invariant dimension, i.e. they are, according to the Holic Principle, privileged exponents.
+confirming that $j$ and $G$ has the status of invariant dimension, i.e. they are, according to the Holic Principle, privileged exponents.
 
 \subsection{Ubiquity of $a^{a}$}
 
