--- a/main.tex
+++ b/main.tex
@@ -727,7 +727,7 @@ Now, the study of the 22 amino-acids [3] has shown that $j$ is a computation bas
 The central term $F^3/a$ shows another relation between $j$ and $\Gamma$, to 0.05 % and 0.2 \%:
 \begin{equation}
 F^3/a ≈ (3/e)(e/2)^j  \approx (3/\pi) 4^{\Gamma}
-\begin{equation}
+\end{equation}
 confirming that $j$ and $G$ has the status of invariant dimension, i.e. they are, according to the Holic Principle, privileged exponents.
 
 \subsection{Ubiquity of $a^{a}$}
