--- a/main.tex
+++ b/main.tex
@@ -728,23 +728,23 @@ Now, the study of the 22 amino-acids [3] has shown that $j$ is a computation bas
 (\lambdabar_{CMB}/\lambdabar_e)^3 \approx F^5/6 \approx B^3/a
 \end{equation}
 
-It appears also in the following holographic relation, to 0.16 \% :
+It appears also in the following holographic relation:
 
 \begin{equation}
 (4\pi/3) B^3 \approx \pi(F^3/a)^2
 \end{equation}
 
-while $F^3/(44\pi)$ is close, to 0.01 \%, to the term $A = (3/2) a^7$, which enters, the 'forgotten' electromagnetic power $E_e^2/Aħ$, in the Hydrogen atom, with $E_e = m_ec^2$.
+while $F^3/(44\pi)$ is close, to 0.01 \%, to the term $A = (3/2) a^7$, which enters, the 'forgotten' electromagnetic power $E_e^2/A$, in the Hydrogen atom, with $E_e = m_ec^2$.
 Note that, to 10 ppm and 2 ppm:
 
 \begin{equation}
-(H/n)^2(F^2/B)^3 ≈ (4/3) a^2 \approx W/2\pi \beta^4
+(H/n)^2(F^2/B)^3 \approx (4/3) a^2 \approx W/2\pi \beta^4
 \end{equation}
 
 Where $W$ is the W boson-Electron mass ratio (see Section III). Now, to 30 ppm and 20 ppm :  
 
 \begin{equation}
- (F^3/a)^2 ≈ (P/FH²)^3  \approx  (a/137)(4\pi/3)(F^2/√p)^3 
+ (F^3/a)^2 ≈ (P/FH^2)^3  \approx  (a/137)(4\pi/3)(F^2/p^{1/2}^3 
 \end{equation}
 
 
