--- a/main.tex
+++ b/main.tex
@@ -744,7 +744,7 @@ Note that, to 10 ppm and 2 ppm:
 Where $W$ is the W boson-Electron mass ratio (see Section III). Now, to 30 ppm and 20 ppm :  
 
 \begin{equation}
- (F^3/a)^2 ≈ (P/FH^2)^3  \approx  (a/137)(4\pi/3)(F^2/p^{1/2}^3 
+ (F^3/a)^2 \approx (P/FH^2)^3  \approx  (a/137)(4\pi/3)(F^2/p^{1/2})^3 
 \end{equation}
 
 
