--- a/main.tex
+++ b/main.tex
@@ -722,7 +722,7 @@ It was noted [3] that $j\approx T_{mam}/T_{CMB}$, the ratio between mammal and c
 
 Now, the study of the 22 amino-acids [3] has shown that $j$ is a computation basis. Indeed, to 2\%: $j^{22} \approx 3 P^2 $, and, more precisely, to 0.01 \% :$j^{22} \approx Pp_E^7 $, where $ p_E \approx 1847.599459$ is the Eddington's mass ratio of the couple proton-electron, the roots ratio in the Eddington's equation $10x^2 - 136x + 1 = 0 $.
 
-The last equation means the implication of  in the ultimate theory. Indeed, it appears in the following relation, with the Fermi-Electron mass ratio $F$ value of Section III, to 0.3 ppm and 0.03 \% :
+The last equation means the implication of $B = e^{(e^{\pi}} $ in the ultimate theory. Indeed, it appears in the following relation, with the Fermi-Electron mass ratio $F$ value of Section 4, to 0.3 ppm and 0.03 \% :
 
 \begin{equation}
 (\lambdabar_{CMB}/\lambdabar_e)^3 \approx F^5/6 \approx B^3/a
