--- a/main.tex
+++ b/main.tex
@@ -721,9 +721,7 @@ j \approx ln(R/\lambdabar e) + \Gamma \approx a - e^{\pi} \approx e^{\pi} lna
 It was noted [3] that $j\approx T_{mam}/T_{CMB}$, the ratio between mammal and cosmic temperatures, and that $(Rl_P)^{1/2}$ is close (1\%) to the mammal wavelength $hc/kT_{mam}$. So, \textit{the couple temal photon-Life is at the upper center of the Topological Axis}, while the down center is the Higgs boson (Fig.1). The real center, as seen above, is the dimension n = 16. Moreover,$(R^{\prime}l_P)^{1/2}$ is close (0.1\%) to the water triple point, which is also the product of triple points of Hydrogen and Oxygen, divided by the cosmic temperature. This shows that Chemistry is also involved [3].
 
 Now, the study of the 22 amino-acids [3] has shown that $j$ is a computation basis. Indeed, to 2\%: $j^{22} \approx 3 P^2 $, and, more precisely, to 0.01 \% :$j^{22} \approx Pp_E^7 $, where $ p_E \approx 1847.599459$ is the Eddington's mass ratio of the couple proton-electron, the roots ratio in the Eddington's equation $10x^2 - 136x + 1 = 0 $.
-
-
-
+The last equation means the implication of $B$, he double exponential of $\pi$ in the ultimate theory. Indeed:
 \begin{equation}
 (\lambdabar_{CMB}/\lambdabar_e)^3 \approx F^5/6 \approx B^3/a
 \end{equation}
