--- a/main.tex
+++ b/main.tex
@@ -1138,9 +1138,14 @@ not save the already refuted standard evolutionary model.
 \item 8/In short, the rediscovered cosmos unifies the two main modern cosmologies in a rapid matter-
 antimatter oscillatory bounce. The Cosmos appear as simple, unique, permanent, computational,
 deterministic, trans-planckian, cyclic, topological and inverse-anthropic.
-\item 9/It is now clear that present mathematics are incomplete, and this Coherent Cosmology
-announces a reunification of Philosophy, Mathematics, Physics, Chemistry, Informatics and
-Biology.
+
+It is now clear that present mathematics and Particle Physics are incomplete, and this Coherent Cosmology announces a reunification of Philosophy, Mathematics, Physics, Chemistry, Informatics and Biology. In particular, the pre-Socratic Parmenide philosophy of Permanence must be reconsidered favorably. Eddington's Fudamental Theory must be revisited, specially the genesis of his Large Number, so clearly tied to the $16 \times 16$ matrix.
+
+      This article leads to some predictions:
+\item 1/  The very large infra-red telescopes in preparation will show in the very far field old galaxies instead of expected young ones. Then no artifice, such as inflation, dark energy, multiverse ..., will not save the already refuted standard evolutionary model.
+\item 2/ The Particle Physics will integrate the Koide relation and introduce massive gluons.
+\item 3/ Informatics software will be boosted by the principle of multibase computation.
+\item 4/ The multiple connexions with the DNA chain seems to imply it is a 1D hologram. This seems to be confirmed by recent studies [30]. 
 \end{itemize}
 
 
