--- a/main.tex
+++ b/main.tex
@@ -77,6 +77,8 @@ One can read [1]: \textit{“For example, the size of a planet is the geometric 
 
 The existence of relations that are not explained by known physical theories, is called 'fine tuning' phenomena. But as soon as it involves the observable Universe radius, it signals the existence of a more fundamental theory that must take into account the \textit{ancestral Cosmos concept, which, as Eddington claimed [2], must be permanent [3]}. Extending this to the spatial homogeneity, this leads to the Perfect Cosmological Principle, the very foundation of the steady-state cosmology.
 
+ So Eddington considered rightly the Cosmic Large Number correlations, as recalled in this article. This forgetting of Eddington's pioneer work was enforced by the fact that about 30 dimensionless parameters appear as so called 'free parameters' in the Particle standard model. They are misnamed, since, far from being 'free', they are imposed by Nature. So, a large majority of theorists believe they are due to chance, leading to a separation between Physics and Mathematics, not to speak of Biology. Through a so-called Anthropic Principle, a majority believe in the Multiverse conundrum, a multiplicity of sterile Universe [1].
+
 But, as about 30 dimensionless parameters appear as 'free parameters' in the Particle standard model, a large majority of theorists believe rather they are due to chance, leading to a separation between Physics and Mathematics, not to speak of Biology. Through a so-called Anthropic Principle, a majority believe in the Multiverse conundrum, a multiplicity of sterile Universes [1].
 
 The present article shows that \textit{Physics is a part of mathematics}, refuting the Multiverse Hypothesis by precise fine-tuning between main physical and biological parameters, involving main mathematical constants in particle physics: $\pi$,  e and $\gamma$, the Euler-Mascheroni constant. Also, these relations confirm the Super-string Theory and rehabilitates the tachyonic Bosonic String Theory.
