--- a/main.tex
+++ b/main.tex
@@ -861,13 +861,17 @@ Note that the Lenz-Wyler formula is nothing but the product of the area by the v
 \subsection {The Archimedes constant $\pi$ as a calculation basis}
 
 The value of the Topological Function for the String
-main dimension 26 renders, to 0.1\%, the same Lenz-Wyler form $f{26} \approx 6(2\pi^{2} a^{3} )^{5}$, where $2\pi^{2}a^{3}$ is the area of a 4-sphere of radius $a$. Moreover, with $n/p$ the mass ratio Neutron/Proton, to 0/3\%, 0.02\% and 1
+main dimension 26 renders, to 0.1\%, the same Lenz-Wyler form $f(26) \approx 6(2\pi^{2} a^{3} )^{5}$, where $2\pi^{2}a^{3}$ is the area of a 4-sphere of radius $a$. Moreover, with $n/p$ the mass ratio Neutron/Proton, to 0/3\%, 0.02\% and 1
 ppm:
 $$(p/n) (R/\lambdabar_{e})^{2} \approx (f(26)/6)^{2} \approx (2\pi^{2} a^{3})^{10} \approx \pi^{155}$$
 The corresponding value of $\pi$ in the last expression shows the fractional series 3, 7, 16, -u, with $u \approx
-2 \times 137$. This confirms the above hypothesis concerning the origin of the Cosmos vastness, namely
-that $\pi$ is a intermediate rational calculation basis: in this case, the rational value $\pi_{0} = (355u-22)/
-(113u+7)$ corresponds to the above $G$ value to 10 ppb accuracy.
+2 \times 137$. This confirms again the above hypothesis concerning the origin of the Cosmos vastness, namely
+that a rational approximation for $\pi$ is a intermediate calculation basis. Indeed the rational value
+
+\begin{equation}
+$\pi_{R} = (355u-22)/(113u-7)$ 
+\end{equation}
+corresponds to the above $G$ value to 10 ppb accuracy.
 
 Since $(R/\lambdabar_{e})^{2}$ is also close to $2^{256}$, within 1\%, this illustrates the following musical relation
 involving again 137:
