--- a/main.tex
+++ b/main.tex
@@ -846,11 +846,11 @@ R_{GC}/\lambdabar_M  = (e_{GC}^2)^210  \approx (137e/a)^420
 
 exhibiting the following property (0.3 ppm):
 
- $$ (a/137)^420 ≈ (137 - 3)/120 $$
+ $$ (a/137)^{420} \approx (137 - 3)/120 $$
   
 with $137 - 3 = 7 + 127$ are the Combinatorial Hierarchy terms, while $e_{GC}$ is compatible with the following rational number, in the ppb range, and tied to the heavy Leptons mass ratios by, to 3 ppm:
 
-$$e_{GC} = (3 × 16 × 787)/(13 × 1069) \approx (a\mu/3\tau) (e/2)^{1/420}$$
+$$e_{GC} = (3 \times 16 \times 787)/(13 \times 1069) \approx (a\mu/3\tau) (e/2)^{1/420}$$
 
 This is a dramatic confirmation of the cosmical use of rational approximation of $e$, explaining the cosmos vastness (Section 2.2), and enligthting a double relation of $\mu$ and $\tau$ with $e$, to 0.01 \% and 0.06 \%:
 
@@ -861,7 +861,7 @@ ln\tau \approx 3e \approx a\mu/\tau
 These numbers enters the following dramatic series, to 1 ppm, 56 ppm, and 13 ppm:
 
 \begin{equation}
-2/\delta = 2a^3/pH \approx ln(pH)/2d_e lna \approx (ln\tau/ln\mu)/d_e^² \approx d_e^² ln s/lnt
+2/\delta = 2a^3/pH \approx ln(pH)/2d_e lna \approx (ln\tau/ln\mu)/d_e^2 \approx d_e^2 ln s/lnt
 \end{equation}
 
 where $s ≈ (F/af)^2 $ is compatible with the mass ratio Higgs-Boson/Electron, corresponding to 125.6 GeV.
