--- a/main.tex
+++ b/main.tex
@@ -864,7 +864,7 @@ These numbers enters the following dramatic series, to 1 ppm, 56 ppm, and 13 ppm
 2/\delta = 2a^3/pH \approx ln(pH)/2d_e lna \approx (ln\tau/ln\mu)/d_e^2 \approx d_e^2 ln s/lnt
 \end{equation}
 
-where $s ≈ (F/af)^2 $ is compatible with the mass ratio Higgs-Boson/Electron, corresponding to 125.6 GeV.
+where $s \approx (F/af)^2 $ is compatible with the mass ratio Higgs-Boson/Electron, corresponding to 125.6 GeV.
 
 
 \subsection {Wyler's approach}
