--- a/main.tex
+++ b/main.tex
@@ -841,7 +841,7 @@ a series converging very much rapidly than the classical Euler's one $(1+1/n)^n$
 
 Now the canonical ratio $R_{GC}/\lambdabar_M = 2P^9/a^6pH $ confirms the Extended Holographic Principle, to 0.04 \%:
 \begin{equation}
-R_{GC}/\lambdabar_M  = (e_{GC}^2)^210  \approx (137e/a)^{420}  
+R_{GC}/\lambdabar_M  = (e_{GC}^2)^{210}  \approx (137e/a)^{420}  
 \end{equation}
 exhibiting the following property (0.3 ppm):
  $$ (a/137)^{420} \approx (137 - 3)/120 $$  
@@ -854,9 +854,9 @@ ln\tau \approx 3e \approx a\mu/\tau
 \end{equation}
 These numbers enters the following dramatic series, to 1 ppm, 56 ppm, and 13 ppm:
 \begin{equation}
-2/\delta = 2a^3/pH \approx ln(pH)/2d_e lna \approx (ln\tau/ln\mu)/d_e^2 \approx d_e^2 ln s/lnt
+2/\delta = 2a^3/pH \approx ln(pH)/2d_e lna \approx (ln\tau/ln\mu)/d_e^2 \approx d_e^2 ln s/ln\tau
 \end{equation}
-where $s \approx (F/af)^2 $ is compatible with the mass ratio Higgs-Boson/Electron, corresponding to 125.6 GeV.
+where $s \approx (F/af)^2 \approx 496^2 $ is compatible with the mass ratio Higgs-Boson/Electron, corresponding to 125.6 GeV, and corresponds in the Topological Axis to $k \approx \pi $, correspondong to $n \approx \gamma \Gamma$ (Fig. 1).
 
 
 \subsection {Wyler's approach}
@@ -887,12 +887,10 @@ $$(p/n) (R/\lambdabar_{e})^{2} \approx (f(26)/6)^{2} \approx (2\pi^{2} a^{3})^{1
 The corresponding value of $\pi$ in the last expression shows the fractional series 3, 7, 16, -u, with $u \approx
 2 \times 137$. This confirms again the above hypothesis concerning the origin of the Cosmos vastness, namely
 that a rational approximation for $\pi$ is a intermediate calculation basis. Indeed the rational value
-
 \begin{equation}
 \pi_{R} = (355u-22)/(113u-7) 
 \end{equation}
 corresponds to the above $G$ value to 10 ppb accuracy.
-
 Since $(R/\lambdabar_{e})^{2}$ is also close to $2^{256}$, within 1\%, this illustrates the following musical relation
 involving again 137:
 $$2^{1/155} \approx \pi^{1/256} \approx (2\pi)^{1/3 \times 137}$$
