--- a/main.tex
+++ b/main.tex
@@ -878,9 +878,9 @@ where $D = 196883$ is the Moonshine Monster dimension [23], where $D = 196883$ i
 
 Note that the Lenz-Wyler formula is nothing but the product of the area by the volume of a cube with side $\pi $. If one consider a cube with side 5, privileging again the identification dimension = exponent, this gives $6 \times 5^5 = 137^2 + 19 $. This is no hazard, since this relation was long been deduced from basic considerations on quarks [3]. Indeed with $u = 5 $ and $d = 6 $, the combination $uud = 150 $, has a power 3/2 which is close to $H$, while the combination $udd \approx (n/a)^2 $, with $n$ the neutron-electron mass ratio. This leads to $6\times 5^5 \approx (aH/n)^2 $, to 0.012 \%. 
 Note that, while, to 41 ppm:
-$$R_{GC}/_lambdabar_e \approx 6^{128}/(1+1/\sqrt2)$$
-leading to the approximation for the celerity ratio $ C/c \approx 3^{128} \sqrt{ln2/2}$. Moreover, one observes, to 2.6 %;
-$(R_{GC}/_lambdabar_e)^3 \approx 150^137$, so the quark hypothesis u = 5, d = 6 is comforted by the Grandcosmos. This would imply that the quark d is composite.
+$$R_{GC}/\lambdabar_e \approx 6^{128}/(1+1/\sqrt2)$$
+leading to the approximation for the celerity ratio $ C/c\approx3^{128} \sqrt{ln2/2}$. Moreover, one observes, to 2.6 %;
+$(R_{GC}/\lambdabar_e)^3 \approx 150^{137}$, so the quark hypothesis u = 5, d = 6 is comforted by the Grandcosmos. This would imply that the quark d is composite.
 
 \subsection {The Archimedes constant $\pi$ as a calculation basis}
 
